# stable-worldmodel-candle

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  pyproject.toml
docs/: upstream-stable-worldmodel.md
include/: stable_worldmodel_candle.h
src/: artifact.rs  checkpoint.rs  config.rs  ffi.rs  hub.rs  lewm.rs  lib.rs  modules.rs  planner.rs  preprocess.rs  runtime.rs  session.rs  vit.rs
src/cuda_media/: mod.rs  nvjpeg.rs
src/media/: mod.rs  nvdec.rs  nvjpeg.rs
src/models/: mod.rs
src/models/lewm/: config.rs  loss.rs  mod.rs  model.rs  modules.rs  training.rs  vit.rs
src/models/tdmpc2/: config.rs  mod.rs  model.rs  modules.rs
tests/: artifact.rs  config.rs  ffi.rs  lewm_training.rs  planner.rs  preprocess.rs  runtime.rs  session.rs  tdmpc2.rs
tools/: benchmark_lewm_plan_images_python.py  benchmark_tdmpc2_python.py  compare_npz.py  convert_state_dict_safetensors.py  cuda_parity.sh  export_lewm_fixture.py  export_lewm_training_loss_fixture.py  export_pusht_lewm_training_batch.py  export_tdmpc2_fixture.py  make_benchmark_media.py  plot_benchmark_comparison.py  plot_lewm_image_plan_comparison.py  run_pusht_lewm_rust_demo.py
