[package]
name = "stable-worldmodel-candle"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Candle inference backend for stable-worldmodel checkpoints."

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

candle = { package = "candle-core", version = "0.10.2" }
candle-nn = { package = "candle-nn", version = "0.10.2" }
candle-transformers = { version = "0.10.2" }

hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"], optional = true }
nvjpeg-sys = { version = "0.1.0", optional = true }

[features]
default = ["cudnn"]
hub = ["dep:hf-hub"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["cuda", "candle/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]
nvjpeg = ["cudnn", "dep:nvjpeg-sys"]

[lib]
name = "stable_worldmodel_candle"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "lewm-inspect"
path = "src/bin/lewm-inspect.rs"

[[bin]]
name = "tdmpc2-inspect"
path = "src/bin/tdmpc2-inspect.rs"

[[bin]]
name = "lewm-compare-fixture"
path = "src/bin/lewm-compare-fixture.rs"

[[bin]]
name = "runtime-bench"
path = "src/bin/runtime-bench.rs"

[[bin]]
name = "tdmpc2-compare-fixture"
path = "src/bin/tdmpc2-compare-fixture.rs"
