[project]
name = "stable-worldmodel-candle-tools"
version = "0.1.0"
description = "Python parity tooling for stable-worldmodel-candle."
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.0",
    "numpy>=2.0",
    "stable-worldmodel[train]>=0.1.0",
    "transformers<5",
]

[tool.uv]
package = false
